For adding jupyter notebook on enhancer prediction using random forests

--- a/Machine_Learning_Random_Forests/hands_on_random_forests_chr1.ipynb
+++ b/Machine_Learning_Random_Forests/hands_on_random_forests_chr1.ipynb
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "cat(\"We have\",nrow(train),\"trainig examples and\",nrow(test),\"for testing.\")"
+    "cat(\"We have\",nrow(train),\"training examples and\",nrow(test),\"for testing.\")"
    ]
   },
   {
