--- a/Machine_Learning_Gradient_Boosting/GB_EP_Tutorial.Rmd
+++ b/Machine_Learning_Gradient_Boosting/GB_EP_Tutorial.Rmd
@@ -18,9 +18,10 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Introduction
 
 <p> In this module, we're going to explore the gradient boosting algorithm. *Gradient boosting could be construed as a unison of boosting and gradient descent techniques*, i.e. boosting carried out on the gradient descent of the cost function.
-The gradient descent approach, in loose terms, is the protocol to reach the minima of the function that maps the error terms. Our objective is to minimize the error (error between the true values and the predicted values), thereby finding appropriate coefficients that fit the objective function's equation in a way that best approximations are engendered. </p>
+The gradient descent approach, in loose terms, is the protocol to reach the minima of the function that maps the error terms. Our objective is to minimize the trade-off (error between the true values and the predicted values), thereby finding appropriate coefficients that fit the objective function's equation in a way that best approximations are engendered. </p>
 <p> Boosting is a way to derive random sub-samples of the same size as the original one.</p>
-<p> This aspect of gradient boosting differentiates it from randome forests that aim to aggregate outputs from multiple single-decision trees, implementing basically a consensus-based scheme. Gradient Boosting would contrarily penalize the leafs from the same decision tree until the gradient descent strategy's optimal parameters are met.</p>
+<p> This aspect of gradient boosting differentiates it from **Random Forests** that aim to aggregate outputs from multiple single-decision trees, implementing basically a consensus-based scheme. Gradient Boosting would contrarily penalize the leafs from the same decision tree until the gradient descent strategy's optimal parameters are met.</p>
+<p> Gradient Boosting is also exclusive to Adaptive Boosting or **AdaBoost** </p>
 
 
 ## Package Installation
