Update code for accomodating command line arguments

--- a/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
+++ b/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
@@ -14,7 +14,7 @@
     "<p>The overall selection of data and the analysis protocol has been loosely borrowed from Kim et al. (2016). Typically for a machine learning problem, we shall have a dataset (consolidated, with class and variable/ feature definitions) and that'll be bifurcated (typically in 3:7 or 2:8 proportions) to be used as testing and training sets respectively. Contrarily, in this study both the categories have been sourced differently as you'll see.\n",
     "In this exercise, we shall have positive and negative training examples for the training dataset but only positive examples for the test dataset. And that is perfectively fine.</p>\n",
     "<p>The H1 cell line data for H3K27, H3K4me1, HeK4me2, and H3K4me3 have been sourced from the [ENCODE project](https://www.encodeproject.org/) featured by [Ren Lab](http://renlab.sdsc.edu/renlab_website/bing/). The version of the genome considered is **GrCh38**.</p>\n",
-    "<p>The *bam* data is downloaded and needs to be converted to bed/bw files for further processing. For the same, we employ the bedtools Merge function. The four files showcasing various histone markers for enhancer data are merged together on the basis of overlapping intervals to get a matrix of peak counts that act as features to the 'enhancer' class.</p>"
+    "<p>The *bam* data is downloaded and needs to be converted to bed/bw files for further processing.</p>"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These files (with extension **.bw**) are eventually imported to the online Galaxy interface and executed for the *bedtools Merge* function. The four files showcasing various histone markers for enhancer data are merged together on the basis of overlapping intervals to get a matrix of coverage reads that act as features to the 'enhancer' class. "
+    "The individual RPKM levels of the histone marks are stacked together over the 2000bp intervals that represent the probable enhancers."
    ]
   },
   {
@@ -257,6 +257,13 @@
     "chromosomes <- c(\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\n",
     "                 \"chr15\", \"chr16\", \"chr17\", \"chr18\", \"chr19\", \"chr20\",\"chr21\", \"chr22\", \"chrX\", \"chrY\")\n",
     "merged_bw<- as.data.frame(merged_bw[merged_bw$chrom %in% chromosomes, ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As highlighted in the **bamCoverage** operation, the values are the RPKM levels. *RPKM(reads per kilobase per million) : RPKM (per bin) = number of reads per bin / ( number of mapped reads (in millions) * bin length (kb) )*."
    ]
   },
   {
@@ -466,10 +473,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "BED files for p300 and DHS are (in that order): <br>\n",
+    "Since the positive class labels have to be featured around 2000bp intervals as well, we need to synchronise the data in accordance. The individual BED files for the DHS and p300 binding sites that comprehend enhancers are downloaded for the relevant cell type and sorted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz\", : cannot open URL 'ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz\", : cannot open URL 'ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz'\nTraceback:\n",
+      "1. download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz\", \n .     \"./GSM878621_H1_DNase.bed.gz\")"
+     ]
+    }
+   ],
+   "source": [
+    "download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz\", \"./data/H1_Cell_Line/GSM878621_H1_DNase.bed.gz\")\n",
+    "download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM831nnn/GSM831036/suppl/GSM831036%5F635EFAAXX%2E4%2EH1%5FP300%2Ealn%2Ebed%2Egz\",\"./data/H1_Cell_Line/GSM831036_H1_P300.bed.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system(\"gunzip ./data/H1_Cell_Line/GSM878621_H1_DNase.bed.gz\")\n",
+    "system(\"gunzip ./data/H1_Cell_Line/GSM831036_H1_P300.bed.gz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that sortBed is a function available from bedtools. Ensure that it is installed prior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system(\"sortBed -i ./data/H1_Cell_Line/GSM878621_H1_DNase.bed > ./data/H1_Cell_Line/GSM878621_H1_DNase_sorted.bed\")\n",
+    "system(\"sortBed -i ./data/H1_Cell_Line/GSM831036_H1_P300.bed > ./data/H1_Cell_Line/GSM831036_H1_P300_sorted.bed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, we have BED files for p300 and DHS that are: <br>\n",
     ">1. pruned for standard chromosome entries <br>\n",
     ">2. sorted <br>\n",
-    ">3. individually, bedtools \"merged\" for overlapping intervals <br>"
+    ">3. merged for overlapping intervals <br>"
    ]
   },
   {
@@ -1203,7 +1264,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "3.3.3"
   }
  },
  "nbformat": 4,
