Add revisions for coding positive class labels

--- a/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
+++ b/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For testing data, we consider data only for enhancers. Even with this data, we shall be able to evaluate the model's veracity of predicting positive examples. "
+    "For testing purposes, we consider data only for enhancers. Even with this data alone, we shall be able to evaluate the model's veracity of predicting positive examples. "
    ]
   },
   {
@@ -529,8 +529,107 @@
    "source": [
     "So, we have BED files for p300 and DHS that are: <br>\n",
     ">1. pruned for standard chromosome entries <br>\n",
-    ">2. sorted <br>\n",
-    ">3. merged for overlapping intervals <br>"
+    ">2. sorted <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Working with DNase Hypersensitivity Sites (DHS) data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A few functional packages shall be necessary here. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
+    "    install.packages(\"BiocManager\")\n",
+    "BiocManager::install(c(rtracklayer, GenomicRanges), quietly=TRUE)\n",
+    "\n",
+    "## Calling libraries\n",
+    "\n",
+    "library(rtracklayer)\n",
+    "library(GenomicRanges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The corresponding file is sifted for standard chromosomes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dhs_rev <- import.bed(\"./data/H1_Cell_Line/GSM878621_H1_DNase_sorted.bed\")\n",
+    "chromosomes <- c(\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\n",
+    "                 \"chr15\", \"chr16\", \"chr17\", \"chr18\", \"chr19\", \"chr20\",\"chr21\", \"chr22\", \"chrX\", \"chrY\")\n",
+    "dhs_rev_chr <- dhs_rev[seqnames(dhs_rev) %in% chromosomes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our quest for enhancer prediction would likely require us to examine 2000bp regions. The bins are resized in accordance. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dhs_rev_chr_resize <- resize(dhs_rev_chr, width = 2000)\n",
+    "dhs_final <- as.data.frame(dhs_rev_chr_resize)\n",
+    "export.bed(dhs_final[,1:3], \"dhs_final.bed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are considering the basic attributes of genomic regions, i.e. chromosomal locations marked by chromosome, start index, and end index. To ensure sanctity of the data, let's check if things are placed correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for data integrity\n",
+    "\n",
+    "system(\"awk '$2>0 && $3>$2 {print $1 \"\\t\" $2 \"\\t\" $3}' dhs_final.bed > dhs_finale.bed\")\n",
+    "system(\"sortBed -i dhs_finale.bed > dhs_finale_sorted.bed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks good for now. Next, we treat the p300 binding sites' data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Working with p300 bindings on the genome"
    ]
   },
   {
@@ -539,47 +638,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Importing relevant data ##\n",
-    "## Positive Class Labels ##\n",
+    "## We shall aggregately adhere to the same protocol for data treatment.\n",
     "\n",
-    "dhs <- read.csv(\"./data/H1_Cell_Line/GSM878621_H1_DNase_sorted.bed\", sep = '\\t', header = FALSE)\n",
-    "p300 <- read.csv(\"./data/H1_Cell_Line/GSM831036_H1_P300_sorted.bed\", sep = '\\t', header = FALSE)\n",
+    "p300_rev <- import.bed(\"./data/H1_Cell_Line/GSM831036_H1_P300_sorted.bed\")\n",
+    "BiocManager::install(\"diffloop\")\n",
+    "library(diffloop)\n",
+    "p300_rev <- addchr(p300_rev) # Add prefix \"chr\" to the seqnames #\n",
+    "p300_rev_chr <- p300_rev[seqnames(p300_rev) %in% chromosomes]\n",
     "\n",
-    "## We see that the chromosome names in p300 data are just numbers. Let's add \"chr\" in the beginning for consistency. \n",
-    "p300$V1 <- paste0(\"chr\",p300$V1)\n",
+    "p300_rev_chr_resize <- resize(p300_rev_chr, width = 2000)\n",
+    "p300_rev_final <- as.data.frame(p300_rev_chr_resize)\n",
+    "p300_rev_final <- unique(p300_rev_final[,c(\"seqnames\",\"start\",\"end\")]) # removing redundant entries #\n",
+    "export.bed(p300_rev_final, \"p300_rev_final.bed\")\n",
     "\n",
-    "## Selecting useful columns: chrom, start, end.\n",
-    "p300 <- p300[,c(1,2,3)]\n",
-    "dhs <- dhs[,c(1,2,3)]\n",
-    "\n",
-    "## Sifting standard chromosomes.\n",
-    "colnames(dhs) <- c(\"chrom\",\"start\",\"end\")\n",
-    "colnames(p300) <- c(\"chrom\",\"start\",\"end\")\n",
-    "\n",
-    "## Valid chromosomes.\n",
-    "dhs <- as.data.frame(dhs[dhs$chrom %in% chromosomes, ])\n",
-    "p300 <- as.data.frame(p300[p300$chrom %in% chromosomes, ])\n",
-    "\n",
-    "## Saving files\n",
-    "\n",
-    "write.table(p300,\"./data/H1_Cell_Line/h1_p300.bed\", sep=\"\\t\", row.names=FALSE, quote = FALSE)\n",
-    "write.table(dhs,\"./data/H1_Cell_Line/h1_dhs.bed\", sep=\"\\t\", row.names=FALSE, quote = FALSE)\n",
-    "\n",
-    "\n",
-    "## Saving as a final intersection of p300 and DHS sites\n",
-    "system(\"intersectBed -a h1_p300_merged.bed -b h1_dhs_merged.bed > h1_p300_dhs_intersect.bed\")\n",
-    "\n",
-    "\n",
-    "## Add class to the data: \"enhancer\"\n",
-    "\n",
-    "h1_p300_dhs_intersect <- read.table(\"./data/H1_Cell_Line/h1_p300_dhs_intersect.bed\", \n",
-    "                                    sep = \"\\t\")\n",
-    "h1_p300_dhs_intersect$V4 <- \"Enhancer\"\n",
-    "write.table(h1_p300_dhs_intersect,\n",
-    "            \"./data/H1_Cell_Line/h1_p300_dhs_intersect_class.bed\", \n",
-    "            sep=\"\\t\",\n",
-    "            row.names=FALSE, \n",
-    "            quote = FALSE)\n"
+    "system(\"sortBed -i p300_rev_final.bed > p300_rev_final_sorted.bed\")\n",
+    "system(\"awk '{print $1 \"\\t\" $2 \"\\t\" $3}' p300_rev_final_sorted.bed > p300_rev_finale.bed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the p300 bindings genomewide, we shall filter them for being distant to the promoter/TSS regions. Note that we are solely interested in the ones that are distal to the TSS; **distal as in non-proximal!**\n",
+    "GRanges objects are workabkle for set operations."
    ]
   },
   {
@@ -616,6 +697,54 @@
    "source": [
     "### Negative Class Labels"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To begin with, let us download the files corresponding to the H1 cell line that we've chosen as our test case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Downloading the relevant files #\n",
+    "# DHS data #\n",
+    "download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM878nnn/GSM878621/suppl/GSM878621%5FUW%2EH1%2EChromatinAccessibility%2EDS19100%2Ebed%2Egz\", \"./data/H1_Cell_Line/GSM878621_H1_DNase.bed.gz\")\n",
+    "system(\"gunzip ./data/H1_Cell_Line/GSM878621_H1_DNase.bed.gz\")\n",
+    "\n",
+    "# P300 data #\n",
+    "download.file(\"ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM831nnn/GSM831036/suppl/GSM831036%5F635EFAAXX%2E4%2EH1%5FP300%2Ealn%2Ebed%2Egz\", \"./data/H1_Cell_Line/GSM831036_H1_P300.bed.gz\")\n",
+    "system(\"gunzip ./data/H1_Cell_Line/GSM831036_H1_P300.bed.gz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us sort the data in these files as per the chromosomal entries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sorting the data #\n",
+    "system(\"sortBed -i ./data/H1_Cell_Line/GSM878621_H1_DNase.bed > ./data/H1_Cell_Line/GSM878621_H1_DNase_sorted.bed\")\n",
+    "system(\"sortBed -i ./data/H1_Cell_Line/GSM831036_H1_P300.bed > ./data/H1_Cell_Line/GSM831036_H1_P300_sorted.bed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
