Add selective changes

--- a/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
+++ b/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,18 +548,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bioconductor version 3.4 (BiocManager 1.30.10), R 3.3.3 (2017-03-06)\n",
+      "\n",
+      "Installing package(s) 'BiocVersion', 'rtracklayer', 'GenomicRanges'\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘BiocVersion’ is not available (for R version 3.3.3)”\n",
+      "also installing the dependencies ‘XML’, ‘RCurl’\n",
+      "\n",
+      "\n",
+      "Warning message:\n",
+      "“unable to access index for repository https://bioconductor.org/packages/3.4/workflows/bin/macosx/mavericks/contrib/3.3:\n",
+      "  cannot download all files”\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  There are binary versions available but the source versions are later:\n",
+      "         binary    source needs_compilation\n",
+      "XML    3.98-1.9 3.98-1.20              TRUE\n",
+      "RCurl 1.95-4.10 1.95-4.12              TRUE\n",
+      "\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/x9/w89rq3h57qvd9tnz_t48ld6w0000gn/T//RtmpwEB5M8/downloaded_packages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "installing the source packages ‘XML’, ‘RCurl’\n",
+      "\n",
+      "\n",
+      "Warning message in install.packages(...):\n",
+      "“installation of package ‘XML’ had non-zero exit status”\n",
+      "Warning message in install.packages(...):\n",
+      "“installation of package ‘RCurl’ had non-zero exit status”\n",
+      "Old packages: 'KernSmooth', 'MASS', 'Matrix', 'boot', 'class', 'cluster',\n",
+      "  'codetools', 'foreign', 'lattice', 'mgcv', 'repr', 'rpart'\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if (!requireNamespace(\"BiocManager\", quietly = TRUE))\n",
     "    install.packages(\"BiocManager\")\n",
-    "BiocManager::install(c(rtracklayer, GenomicRanges), quietly=TRUE)\n",
-    "\n",
-    "## Calling libraries\n",
-    "\n",
-    "library(rtracklayer)\n",
-    "library(GenomicRanges)"
+    "BiocManager::install(c(\"rtracklayer\", \"GenomicRanges\"))"
    ]
   },
   {
@@ -571,10 +616,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: GenomicRanges\n",
+      "\n",
+      "Loading required package: GenomeInfoDb\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error: package ‘GenomeInfoDb’ could not be loaded\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: package ‘GenomeInfoDb’ could not be loaded\nTraceback:\n",
+      "1. library(rtracklayer)",
+      "2. .getRequiredPackages2(pkgInfo, quietly = quietly)",
+      "3. library(pkg, character.only = TRUE, logical.return = TRUE, lib.loc = lib.loc, \n .     quietly = quietly)",
+      "4. .getRequiredPackages2(pkgInfo, quietly = quietly)",
+      "5. stop(gettextf(\"package %s could not be loaded\", sQuote(pkg)), \n .     call. = FALSE, domain = NA)"
+     ]
+    }
+   ],
    "source": [
+    "## Calling libraries\n",
+    "\n",
+    "library(rtracklayer)\n",
+    "library(GenomicRanges)\n",
+    "\n",
     "dhs_rev <- import.bed(\"./data/H1_Cell_Line/GSM878621_H1_DNase_sorted.bed\")\n",
     "chromosomes <- c(\"chr1\",\"chr2\",\"chr3\",\"chr4\",\"chr5\",\"chr6\",\"chr7\",\"chr8\",\"chr9\",\"chr10\",\"chr11\",\"chr12\",\"chr13\",\"chr14\",\n",
     "                 \"chr15\", \"chr16\", \"chr17\", \"chr18\", \"chr19\", \"chr20\",\"chr21\", \"chr22\", \"chrX\", \"chrY\")\n",
@@ -590,9 +664,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in resize(dhs_rev_chr, width = 2000): object 'dhs_rev_chr' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in resize(dhs_rev_chr, width = 2000): object 'dhs_rev_chr' not found\nTraceback:\n",
+      "1. resize(dhs_rev_chr, width = 2000)"
+     ]
+    }
+   ],
    "source": [
     "dhs_rev_chr_resize <- resize(dhs_rev_chr, width = 2000)\n",
     "dhs_final <- as.data.frame(dhs_rev_chr_resize)\n",
